YT-17433: Rename TableSchema.builderWithUniqueKeys->builder